Fix al Método helper ConsultarArchivoDesdeEnsamblado. No tomaba el ensamblado que contiene los recursos incrustados, para lo cual, se mejora para que sea ingresado como segundo parámetro el nombre del ensamblado en cuestión.

--- a/EjemploMVC/Views/Shared/_MenuCommon.cshtml
+++ b/EjemploMVC/Views/Shared/_MenuCommon.cshtml
@@ -21,7 +21,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reportería <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="#">Report Viewer</a></li>
-						<li><a href="#">ITextSharp</a></li>
+						<li><a href="@Url.Action("ITextSharp", "Reporteria")">ITextSharp</a></li>
 					</ul>
 				</li>
 				<li class="dropdown">
